updating More to Come section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="col-12 col-lg-3" id="aboutme">
         <h2>More To Come Soon!</h2>
         <p>
-          I will continue to add more projects here as they are completed. Stay tuned for more to come, and if you have any 
+          If you would like to check out more of my work, please use the link in the nav bar to my GitHub profile, where all of my projects can be found. I will continue to add more projects here as they are completed. Stay tuned for more to come, and if you have any 
           suggestions as to what I could build, feel free to submit them in the form at the bottom of the page.
         </p>
       </div>
